--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+body {
+  text-align: left;
+  font-family: "trebuchet ms", sans-serif;
+  font-size: 100%;
+  max-width: 300px;
+  margin-top: 3em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.panier {
+  padding: 5px;
+  width: 450px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.produit {
+  background-color: #fafafa;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: auto;
+  border: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.input_gestion {
+  background-color: #fafafa;
+  padding: 10px;
+  width: 320px;
+}
+
+.produit {
+  background-color: #fafafa;
+}
+
+fieldset {
+  background-color: #ffffff;
+  padding: 0 20px 20px 20px;
+  margin-bottom: 10px;
+  border: 1px solid #df3f3f;
+  border-radius: 8px;
+}
+
+legend {
+  color: #df3f3f;
+  font-weight: bold;
+}
+
+label {
+  width: 120px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+label.price {
+  font-weight: bold;
+}
+
+label.panier {
+  font-weight: bold;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: inline;
+  border: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+input {
+  background-color: #fff3f3;
+  padding: 3px;
+  border: 1px solid #f5c5c5;
+  border-radius: 5px;
+  width: 50px;
+  box-shadow: 1px 1px 2px #c0c0c0 inset;
+  display: inline-block;
+  margin-left: 1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  background-color: transparent;
+  width: 100px;
+  margin-left: 5px;
+  box-shadow: 1px 1px 1px #d83f3d;
+  font-size: 1.2em;
+  padding: 2px;
+  border: 4px;
+  float: right;
 }
